tests/samples/negative/pointers/invalid_cast_pointer.ax
module invalid_cast_pointer;

fn main() -> i32 {
    var value: i32 = 1;
    let number: usize = ((&value) as usize);
    return ((number) as i32);
}
